--- a/jade/_config.jade
+++ b/jade/_config.jade
@@ -1,5 +1,5 @@
 - var post = {}
 - post.header = true
-- post.title           = 'titulo'
-- post.date            = '17 enero, 2016'
-- post.author          = 'Jan Sanchez'
+- post.title           = 'RUBY - DEFINICIÓN, OPERADORES Y CLASES'
+- post.date            = '20 enero, 2016'
+- post.author          = 'Pedro Vega'
